# platformer-game

./: .gitignore  CMakeLists.txt  Makefile
src/: drivers.cpp  main.cpp  platforms.cpp  player.cpp  renderer.cpp  window.cpp
src/include/: Drivers.h  GodLibrary.h  Platforms.h  Player.h  Renderer.h  Window.h
